# create-tawala-app

./: .gitignore  README.md  pyproject.toml
src/create_tawala_app/: __init__.py
src/create_tawala_app/templates/vercel/: .gitignore  pyproject.toml  vercel.json
src/create_tawala_app/templates/vercel/api/: asgi.py  wsgi.py
src/create_tawala_app/templates/vercel/app/: admin.py  apps.py  models.py  views.py
src/create_tawala_app/templates/vercel/app/static/app/: global.css
src/create_tawala_app/templates/vercel/app/static/app/css/: input.css
src/create_tawala_app/templates/vercel/app/templates/app/: home.html
