[project]
name = "tawala-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tawala", "psycopg[binary,pool]>=3.2.13", "vercel>=0.3.5"]

[dependency-groups]
dev = ["djlint>=1.36.4"]

[tool.uv.sources]
# TODO: Remove when django publishes the stable 6.0 release
tawala = { git = "https://github.com/tawalabora/tawala.git" }

[tool.tawala]
allowed-hosts = ["localhost", "127.0.0.1"]
secret-key = "django-insecure-change-me-in-production-via-envvar"
storage = { backend = "vercel", token = "your-vercel-blob-token-here-or-via-envvar-to-keep-secret" }
